--- a/octoprint_mrbeam/templates/conversion_dialog.jinja2
+++ b/octoprint_mrbeam/templates/conversion_dialog.jinja2
@@ -1,4 +1,4 @@
-<div id="dialog_vector_graphics_conversion" class="modal hide fade">
+<div id="dialog_vector_graphics_conversion" data-test="conversion-dialog-vector-graphics" class="modal hide fade">
     <div class="modal-header">
         <h3 data-bind="visible:!slicing_in_progress()">{{ _('Material') }}
             <span data-bind="visible:customized_material()">{{ _('(customized)') }}</span>
