E2E - prepare to test for settings

--- a/octoprint_mrbeam/templates/conversion_dialog.jinja2
+++ b/octoprint_mrbeam/templates/conversion_dialog.jinja2
@@ -29,7 +29,7 @@
                             <i class="icon-ok icon-large"></i>&nbsp; {{ _('Done') }}
                         </a>
                         <div>
-                            <a id="materials_manage_info" class="show_only_online"
+                            <a id="materials_manage_info" data-test="custom-material-learn-how" class="show_only_online"
                                href="https://mr-beam.freshdesk.com/en/support/solutions/articles/43000431865-save-custom-material-settings"
                                target="_blank" style="text-decoration: none;">
                                 <i class="icon-external-link"></i>&nbsp; {{ _('Learn how to save<br />custom material settings...') }}
