--- a/octoprint_mrbeam/templates/tab/tab_materialstore.jinja2
+++ b/octoprint_mrbeam/templates/tab/tab_materialstore.jinja2
@@ -1,10 +1,10 @@
 <div class="tab-pane" id="material_store_content">
     <div id="loading_spinner_wrapper">
         <div id="loading_spinner">
-            <i class="icon icon-spinner icon-spin" style="font-weight: bold; font-size: 4em"></i>
+            <i class="icon icon-spinner icon-spin"></i>
         </div>
     </div>
-    <iframe id="material_store_iframe" class="hidden" loading="lazy" src="http://localhost:3000"></iframe>
+    <iframe id="material_store_iframe" class="hidden" loading="lazy" src="#"></iframe>
     <div id="connection_error" class="hidden">
         <div class="row-fluid no-internet-connection-section">
             <div class="span12">
