--- a/octoprint_mrbeam/static/css/mrbeam.css
+++ b/octoprint_mrbeam/static/css/mrbeam.css
@@ -3427,3 +3427,9 @@ button#terminal-send {
 }
 
 /* Hard refresh overlay */
+
+/* Corner Calibration */
+.corner_calibration .focus_reminder{
+  width: 250px;
+}
+/* Corner Calibration */
