added requested design change to make the text line shorter

--- a/octoprint_mrbeam/static/css/mrbeam.css
+++ b/octoprint_mrbeam/static/css/mrbeam.css
@@ -3429,6 +3429,9 @@ button#terminal-send {
 /* Hard refresh overlay */
 
 /* Corner Calibration */
+.corner_calibration {
+  max-width: 800px;
+}
 .corner_calibration .focus_reminder{
   width: 250px;
 }
